fix: rework layout and fix for when metrics server is not enabled